wayland/surface: don't clear fifo barrier on new commits

Otherwise, the following sequence will cause presentation to be infinitely fast,
despite fifo being used:
- set_barrier
- commit
- commit
- wait_barrier

BUG: 508822


(cherry picked from commit fdd0a94e0013c0190e115a433588b294de4df144)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>