src/wayland/surface.cpp
@@ -642,7 +642,7 @@ void SurfaceState::mergeInto(SurfaceState *target)
     target->renderingIntent = renderingIntent;
     target->alphaMultiplier = alphaMultiplier;
     target->yuvCoefficients = yuvCoefficients;
-    target->fifoBarrier = std::exchange(fifoBarrier, false);
+    target->fifoBarrier |= std::exchange(fifoBarrier, false);
     target->hasFifoWaitCondition = std::exchange(hasFifoWaitCondition, false);
     target->yuvCoefficients = yuvCoefficients;
     target->range = range;
